fix layout issues on smaller screens

--- a/jsapp/scss/components/_kobo.drawer.scss
+++ b/jsapp/scss/components/_kobo.drawer.scss
@@ -102,7 +102,7 @@ $s-drawer-width: 270px;
     width: 340px;
   }
 
-  .mdl-layout__content {
+  .k-drawer + .mdl-layout__content {
     margin-left: 0;
   }
 }
